add recipient check to rbl plugin

--- a/test/functional/configs/merged-local.conf
+++ b/test/functional/configs/merged-local.conf
@@ -906,6 +906,11 @@ options = {
           replies = ["127.0.0.2"];
         },
         {
+          name = "dirty.sanchez.com.test9.uribl";
+          type = a;
+          replies = ["127.0.0.5"];
+        },
+        {
           name = "1.2.3.4.test10.uribl";
           type = a;
           replies = ["127.0.0.2"];
