--- a/test/functional/configs/merged-override.conf
+++ b/test/functional/configs/merged-override.conf
@@ -384,6 +384,17 @@ rbl {
         sel_helo = "helo()";
       }
     }
+    RBL_RECIPIENT {
+      rbl = "test9.uribl";
+      ignore_defaults = true;
+      emails_domainonly = true;
+      checks = ["recipients"];
+      unknown = true;
+      disable_monitoring = true;
+      returncodes = {
+        "RBL_RECIPIENT_CODE_5" = "127%.0%.0%.5";
+      }
+    }
   }
 }
 
