add MX resolution for recipients DNSBL check

--- a/test/functional/configs/merged-local.conf
+++ b/test/functional/configs/merged-local.conf
@@ -945,6 +945,26 @@ options = {
           type = "a";
           rcode = 'norec';
         },
+        {
+          name = "dirty.sanchez.com";
+          type = "mx";
+          replies = ["10 a.dirty.sanchez.com", "20 b.dirty.sanchez.com"];
+        },
+        {
+          name = "a.dirty.sanchez.com";
+          type = "a";
+          replies = ["1.2.3.4"];
+        },
+        {
+          name = "b.dirty.sanchez.com";
+          type = "a";
+          replies = ["11.22.33.44"];
+        },
+        {
+          name = "44.33.22.11.test9.uribl",
+          type = "a";
+          rcode = 'nxdomain';
+        },
         # TODO: add IPv6 tests
         ];
   }
