--- a/test/functional/configs/merged-override.conf
+++ b/test/functional/configs/merged-override.conf
@@ -395,6 +395,19 @@ rbl {
         "RBL_RECIPIENT_CODE_5" = "127%.0%.0%.5";
       }
     }
+    RBL_RECIPIENT_IP {
+      rbl = "test9.uribl";
+      ignore_defaults = true;
+      emails_domainonly = true;
+      resolve_ip = true;
+      resolve_mx = true;
+      checks = ["recipients"];
+      unknown = true;
+      returncodes_matcher = "luapattern";
+      returncodes = {
+        "RBL_RECIPIENT_IP_CODE_2" = "127%.0%.0%.2";
+      }
+    }
   }
 }
 
